--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    
   </head>
   <body>
-
+<div class="container">
+    <div class="homepagebox">
+        
+    </div>
+</div>
   </body>
   <script src="js/index.js"></script>
 </html>
