--- a/login.html
+++ b/login.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </head>
+  <body>
     <div class="container">
-
+      <div class="loginbox">
+        <form action="#" method="post">
+          <div class="logo">
+            <img
+              src="https://img.freepik.com/psd-gratuit/maquette-logo-noir-grave_125540-223.jpg?w=360"
+              alt=""
+            />
+          </div>
+          <select name="person" id="person">
+            <option value="retailer">Retailer</option>
+            <option value="sr">SR</option>
+            <option value="admin">Admin</option>
+          </select>
+          <input type="number" id="number" name="number" placeholder="Number" />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Password"
+          />
+          <a href="#">Forget Password?</a>
+          <input
+            type="submit"
+            name="submit"
+            id="submit"
+            class="submit"
+            value="Login"
+          />
+        </form>
+      </div>
     </div>
-</body>
-</s
+  </body>
+</html>
