--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <nav>
             <ul>
-              <a href="index.html">HOME</a>
+              <a href="index.html">Home</a>
               <a href="contact.html">Contact</a>
               <a href="about.html">About</a>
               <a href="shop.html">Shop</a>
