--- a/user.html
+++ b/user.html
@@ -36,21 +36,84 @@
           </div>
           <div class="usercontent">
             <div class="room orders">
-              <div class="title">Orders</div>
-              <div class="box">
+              <div class="o title">Orders</div>
+              <div class="orderbox">
                 <div class="order">
-                  <div class="image"><img src="/image/product/1573147731302.jpeg" alt=""></div>
+                  <div class="image">
+                    <img src="/image/product/1573147731302.jpeg" alt="" />
+                  </div>
                   <div class="name">1 KG CHAL DAL soyabin dal</div>
-                  <div class="price">134$</div>
-                  <div class="quantity">4</div>
-                  <div class="totalprice">467$</div>
+                  <div class="pqt">
+                    <div class="price">each: 134$</div>
+                    <div class="quantity">quantity: 4</div>
+                    <div class="totalprice">total: 467$</div>
+                  </div>
+                  <div class="time">12.3.2022||12.32.04</div>
+                  <div class="status">Process</div>
+                </div>
+                <div class="order">
+                  <div class="image">
+                    <img src="/image/product/1573147731302.jpeg" alt="" />
+                  </div>
+                  <div class="name">1 KG CHAL DAL soyabin dal</div>
+                  <div class="pqt">
+                    <div class="price">each: 134$</div>
+                    <div class="quantity">quantity: 4</div>
+                    <div class="totalprice">total: 467$</div>
+                  </div>
+                  <div class="time">12.3.2022||12.32.04</div>
+                  <div class="status">Process</div>
+                </div>
+                <div class="order">
+                  <div class="image">
+                    <img src="/image/product/1573147731302.jpeg" alt="" />
+                  </div>
+                  <div class="name">1 KG CHAL DAL soyabin dal</div>
+                  <div class="pqt">
+                    <div class="price">each: 134$</div>
+                    <div class="quantity">quantity: 4</div>
+                    <div class="totalprice">total: 467$</div>
+                  </div>
+                  <div class="time">12.3.2022||12.32.04</div>
+                  <div class="status">Process</div>
+                </div>
+                <div class="order">
+                  <div class="image">
+                    <img src="/image/product/1573147731302.jpeg" alt="" />
+                  </div>
+                  <div class="name">1 KG CHAL DAL soyabin dal</div>
+                  <div class="pqt">
+                    <div class="price">each: 134$</div>
+                    <div class="quantity">quantity: 4</div>
+                    <div class="totalprice">total: 467$</div>
+                  </div>
+                  <div class="time">12.3.2022||12.32.04</div>
+                  <div class="status">Process</div>
+                </div>
+                <div class="order">
+                  <div class="image">
+                    <img src="/image/product/1573147731302.jpeg" alt="" />
+                  </div>
+                  <div class="name">1 KG CHAL DAL soyabin dal</div>
+                  <div class="pqt">
+                    <div class="price">each: 134$</div>
+                    <div class="quantity">quantity: 4</div>
+                    <div class="totalprice">total: 467$</div>
+                  </div>
+                  <div class="time">12.3.2022||12.32.04</div>
                   <div class="status">Process</div>
                 </div>
               </div>
             </div>
             <div class="room userinfos">
-              <div class="title">Infos</div>
-              <div class="box"></div>
+              <div class="i title">Infos</div>
+              <div class="infobox">
+                <span>Name:: <span class="bold">Mujahid</span> </span>
+                <span>Shop Name::<span class="bold"> Bhai Bhai enterprize</span></span>
+                <span>elaka::<span class="bold">minapara</span> </span>
+                <span>zila:: <span class="bold">rajshahi</span></span>
+                <span>upozila::<span class="bold">rajshahi</span> </span>
+              </div>
             </div>
           </div>
         </div>
