--- a/pagelink.html
+++ b/pagelink.html
@@ -28,5 +28,31 @@
     9. <a href="user.html">user</a>
     <br>
     <br>
+    -----------HR-----------------
+    <br><br>
+    10. <a href="">HR Home</a>
+    <br><br>
+    10. <a href="">Orders</a>
+    <br><br>
+    10. <a href=""></a>
+    <br><br>
+    10. <a href="">HR Home</a>
+    <br><br>
+    10. <a href="">HR Home</a>
+    <br><br>
+    10. <a href="">HR Home</a>
+    <br><br>
+---------------ADMIN------------------
+<br><br>
+10. <a href="">Admin Home</a>
+<br><br>
+10. <a href="">All orders</a>
+<br><br>
+10. <a href="">all carts</a>
+<br><br>
+10. <a href="">all users</a>
+<br><br>
+10. <a href="">all HR</a>
+
 </body>
 </html>
